--- a/quatroestacoes/templates/quatroestacoes/moradores/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/lista.html
@@ -1,7 +1,7 @@
 {% if moradores %}
     <ul>
     {% for morador in moradores %}
-        <li>morador.nome</li>
+        <li>{{ morador.nome }} {{ morador.sobrenome }}</li>
     </ul>
     {% endfor %}
 {% else %}
