--- a/quatroestacoes/templates/quatroestacoes/admin/index.html
+++ b/quatroestacoes/templates/quatroestacoes/admin/index.html
@@ -1,2 +1,2 @@
 <h1>Página do admin</h1>
-<a href="{% url 'quatroestacoes:moradores_admin' %}">Moradores</a>
+<a href="{% url 'quatroestacoes:morador_admin' %}">Moradores</a>
