Criar templates para alterar e deletar um morador

--- a/quatroestacoes/templates/quatroestacoes/moradores/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/lista.html
@@ -1,7 +1,7 @@
 {% if moradores %}
     <ul>
     {% for morador in moradores %}
-        <li>{{ morador.nome }} {{ morador.sobrenome }}</li>
+        <a href="{% url 'quatroestacoes:moradores_info' morador.id %}"><li>{{ morador.nome }} {{ morador.sobrenome }}</li></a>
     </ul>
     {% endfor %}
 {% else %}
