--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -1,5 +1,5 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block conteudo %}
-    <h1>Página do admin</h1>
-{% endblock conteudo %}
+    <h1>PREENCHER DE CONTEÚDO</h1>
+{% endblock %}
