Implementar sistema de autenticação na página principal (morador)

--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <a href="#">SAIR</a>
+        <a href="{% url 'quatroestacoes:logout' %}">SAIR</a>
 
         <a href="javascript:void(0);" class="icon" onclick="menuResponsivo()">&#9776;</a>
     </div>
