Implementar verificação para páginas de admin

--- a/quatroestacoes/templates/quatroestacoes/moradores/alterar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/alterar.html
@@ -1,4 +1,8 @@
+{% extends 'quatroestacoes/base.html' %}
+
+{% block conteudo %}
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Alterar informações">
 </form>
+{% endblock conteudo %}
