--- a/quatroestacoes/templates/quatroestacoes/moradores/deletar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/deletar.html
@@ -1,5 +1,9 @@
+{% extends 'quatroestacoes/base.html' %}
+
+{% block conteudo %}
 <form method="post">{% csrf_token %}
     <p>Deseja mesmo apagar o morador "{{ object.nome }} {{ object.sobrenome }}"?</p>
     {{ form }}
     <input type="submit" value="Apagar">
 </form>
+{% endblock conteudo %}
