--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -10,6 +10,7 @@
     <title>Página Inicial</title>
     <link rel="stylesheet" href="{% static 'quatroestacoes/base/css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="{% static 'quatroestacoes/base/img/favicon.png' %}">
     <script src="{% static 'quatroestacoes/base/js/functions.js' %}"></script>
 </head>
 
