--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
@@ -1,5 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% block active_reclamacoes %}active{% endblock active_reclamacoes %}
+
 {% block conteudo %}
 {% if reclamacoes %}
     <ul>
