--- a/quatroestacoes/templates/quatroestacoes/admin/index.html
+++ b/quatroestacoes/templates/quatroestacoes/admin/index.html
@@ -1,5 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% block active_home %}active{% endblock active_home %}>
+
 {% block conteudo %}
     <h1>Página do admin</h1>
 {% endblock conteudo %}
