--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -1,5 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% block active_avisos %}active{% endblock active_avisos %}
+
 {% block conteudo %}
 {% if avisos %}
     <ul>
