--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -17,17 +17,17 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a class="logo"><img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/></a>
-        <a href="{% url 'quatroestacoes:index' %}" class="active">HOME</a>
-        <a href="{% url 'quatroestacoes:moradores_lista' %}">MORADORES</a>
+        <a href="{% url 'quatroestacoes:index' %}" class={% block active_home %}{% endblock active_home %}>HOME</a>
+        <a href="{% url 'quatroestacoes:moradores_lista' %}" class={% block active_moradores %}{% endblock active_moradores %}>MORADORES</a>
         <a href="#">CALENDÁRIO</a>
         <div class="dropdown">
             <button class="dropbtn">OUTROS
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="{% url 'quatroestacoes:avisos_lista' %}">AVISOS</a>
-                <a href="#">SALÃO DE FESTAS</a>
-                <a href="{% url 'quatroestacoes:reclamacoes_lista' %}">RECLAMAÇÕES OU SUGESTÕES</a>
+                <a class="{% block active_avisos %}{% endblock active_avisos %}" href="{% url 'quatroestacoes:avisos_lista' %}">AVISOS</a>
+                <a class="{% block active_salao %}{% endblock active_salao %}" href="#">SALÃO DE FESTAS</a>
+                <a class="{% block active_reclamacoes %}{% endblock active_reclamacoes %}" href="{% url 'quatroestacoes:reclamacoes_lista' %}">RECLAMAÇÕES OU SUGESTÕES</a>
             </div>
         </div>
 
