--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -1,5 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% block active_home %}active{% endblock active_home %}
+
 {% block conteudo %}
     <h1>PREENCHER DE CONTEÚDO</h1>
 {% endblock %}
