--- a/quatroestacoes/templates/quatroestacoes/moradores/alterar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/alterar.html
@@ -1,5 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% block active_moradores %}active{% endblock active_moradores %}
+
 {% block conteudo %}
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
