--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -17,9 +17,9 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a class="logo"><img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/></a>
-        <a href="{% url 'quatroestacoes:index' %}" class={% block active_home %}{% endblock active_home %}>HOME</a>
-        <a href="{% url 'quatroestacoes:moradores_lista' %}" class={% block active_moradores %}{% endblock active_moradores %}>MORADORES</a>
-        <a href="#">CALENDÁRIO</a>
+        <a href="{% url 'quatroestacoes:index' %}" class="{% block active_home %}{% endblock active_home %}">HOME</a>
+        <a href="{% url 'quatroestacoes:moradores_lista' %}" class="{% block active_moradores %}{% endblock active_moradores %}">MORADORES</a>
+        <a href="{% url 'quatroestacoes:calendario' %}" class="{% block active_calendario %}{% endblock active_calendario %}">CALENDÁRIO</a>
         <div class="dropdown">
             <button class="dropbtn">OUTROS
                 <i class="fa fa-caret-down"></i>
