Refazer model Morador utilizando um custom user model

--- a/quatroestacoes/templates/quatroestacoes/moradores/info.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/info.html
@@ -4,8 +4,8 @@
 
 {% block conteudo %}
 {% if morador %}
-    <h3>Nome: {{ morador.nome }}<br></h3>
-    <h3>Sobrenome: {{ morador.sobrenome }}<br></h3>
+    <h3>Nome: {{ morador.first_name }}<br></h3>
+    <h3>Sobrenome: {{ morador.last_name }}<br></h3>
     <h3>Bloco: {{ morador.bloco }}<br></h3>
     <h3>Apartamento: {{ morador.apartamento }}<br></h3>
     <h3>Interfone: {{ morador.interfone }}<br></h3>
