--- a/quatroestacoes/templates/quatroestacoes/login.html
+++ b/quatroestacoes/templates/quatroestacoes/login.html
@@ -1,20 +1,19 @@
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+    {{ form.errors }}
 {% endif %}
 
-<form method="post" action="">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+<form method="post">{% csrf_token %}
+    <table>
+    <tr>
+        <td>{{ form.username.label_tag }}</td>
+        <td>{{ form.username }}</td>
+    </tr>
+    <tr>
+        <td>{{ form.password.label_tag }}</td>
+        <td>{{ form.password }}</td>
+    </tr>
+    </table>
 
-<input type="submit" value="Login">
-<input type="hidden" name="next" value="{{ next }}">
+    <input type="submit" value="Login">
+    <input type="hidden" name="next" value="{{ next }}">
 </form>
