--- a/quatroestacoes/templates/quatroestacoes/moradores/deletar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/deletar.html
@@ -4,7 +4,7 @@
 
 {% block conteudo %}
 <form method="post">{% csrf_token %}
-    <p>Deseja mesmo apagar o morador "{{ object.nome }} {{ object.sobrenome }}"?</p>
+    <p>Deseja mesmo apagar o morador "{{ object.first_name }} {{ object.last_name }}"?</p>
     {{ form }}
     <input type="submit" value="Apagar">
 </form>
