Configurar título da aba em todas as páginas

--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -1,6 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block active_avisos %}active{% endblock active_avisos %}
+{% block titulo %}Avisos{% endblock titulo %}
 
 {% block conteudo %}
 {% if avisos %}
