--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title>{% block titulo %}{% endblock titulo %}</title>
     <link rel="stylesheet" href="{% static 'quatroestacoes/base/css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="{% static 'quatroestacoes/base/img/favicon.png' %}">
@@ -27,7 +27,7 @@
             </button>
             <div class="dropdown-content">
                 <a class="{% block active_avisos %}{% endblock active_avisos %}" href="{% url 'quatroestacoes:avisos_lista' %}">AVISOS</a>
-                <a class="{% block active_salao %}{% endblock active_salao %}" href="#">SALÃO DE FESTAS</a>
+                <a class="{% block active_salao %}{% endblock active_salao %}" href="{% url 'quatroestacoes:reservas_lista' %}">SALÃO DE FESTAS</a>
                 <a class="{% block active_reclamacoes %}{% endblock active_reclamacoes %}" href="{% url 'quatroestacoes:reclamacoes_lista' %}">RECLAMAÇÕES OU SUGESTÕES</a>
             </div>
         </div>
@@ -49,6 +49,7 @@
     <div class="container">
         <div>
             {% block conteudo %}
+            {{ object_list }}
             {% endblock conteudo %}
         </div>  
     </div>
