--- a/quatroestacoes/templates/quatroestacoes/calendario.html
+++ b/quatroestacoes/templates/quatroestacoes/calendario.html
@@ -1,4 +1,5 @@
 {% extends 'quatroestacoes/base.html' %}
+{% block titulo %}Calendário{% endblock titulo %}
 
 {% block active_calendario %}active{% endblock active_calendario %}
 
