--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -1,4 +1,5 @@
 {% extends 'quatroestacoes/base.html' %}
+{% block titulo %}Home{% endblock titulo %}
 
 {% block active_home %}active{% endblock active_home %}
 
