--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/lista.html
@@ -1,6 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block active_reclamacoes %}active{% endblock active_reclamacoes %}
+{% block titulo %}Reclamações{% endblock titulo %}
 
 {% block conteudo %}
 {% if reclamacoes %}
