--- a/quatroestacoes/templates/quatroestacoes/reservas/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/reservas/adicionar.html
@@ -1,6 +1,8 @@
 {% extends 'quatroestacoes/base.html' %}
+{% block titulo %}Reservar salão{% endblock titulo %}
 
 {% block conteudo %}
+
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Reservar salão">
