--- a/quatroestacoes/templates/quatroestacoes/avisos/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/adicionar.html
@@ -1,6 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block active_avisos %}active{% endblock active_avisos %}
+{% block titulo %}Criar aviso{% endblock titulo %}
 
 {% block conteudo %}
 <form method="post">{% csrf_token %}
