--- a/quatroestacoes/templates/quatroestacoes/moradores/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/lista.html
@@ -1,6 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block active_moradores %}active{% endblock active_moradores %}
+{% block titulo %}Moradores{% endblock titulo %}
 
 {% block conteudo %}
 {% if request.user.is_staff %}
