--- a/quatroestacoes/templates/quatroestacoes/reclamacoes/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/reclamacoes/adicionar.html
@@ -1,6 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
 {% block active_reclamacoes %}active{% endblock active_reclamacoes %}
+{% block titulo %}Criar reclamação{% endblock titulo %}
 
 {% block conteudo %}
 <form method="post">{% csrf_token %}
