--- a/quatroestacoes/templates/quatroestacoes/index.html
+++ b/quatroestacoes/templates/quatroestacoes/index.html
@@ -4,5 +4,13 @@
 {% block active_home %}active{% endblock active_home %}
 
 {% block conteudo %}
-    <h1>PREENCHER DE CONTEÚDO</h1>
+    <div class="container-home">
+        <div class="info-comunicados">
+            <h3>QUADRO DE AVISOS</h3>
+        </div>
+    
+        <div class="info-salao">
+            <h3>SALÃO DE FESTAS</h3>
+        </div>
+    </div>
 {% endblock %}
