--- a/quatroestacoes/templates/quatroestacoes/moradores/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/adicionar.html
@@ -4,8 +4,17 @@
 {% block titulo %}Adicionar morador{% endblock titulo %}
 
 {% block conteudo %}
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Adicionar novo morador">
-</form>
+<div class="container-div-form-morador">
+    <div class="container-form-morador">    
+        <form method="post">{% csrf_token %}
+            <h3>CADASTRAR MORADOR</h3>
+            <span>{{ form.as_p }}</span>
+            <div class="container-cadastrar-morador">
+                <input type="submit" value="Adicionar novo morador">
+            </div>
+        </form>
+    </div>
+
+</div>
+
 {% endblock conteudo %}
