--- a/quatroestacoes/templates/quatroestacoes/avisos/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/adicionar.html
@@ -4,8 +4,16 @@
 {% block titulo %}Criar aviso{% endblock titulo %}
 
 {% block conteudo %}
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Criar aviso">
-</form>
+<div class="container-div-form-morador">
+    <div class="container-form-morador">   
+        <form method="post">{% csrf_token %}
+            <h3>CRIAR AVISO</h3>
+            <span>{{ form.as_p }}</span>
+            <div class="container-cadastrar-morador">
+                <input type="submit" value="Criar aviso">
+            </div>
+        </form>
+    </div>
+</div>
+
 {% endblock conteudo %}
