--- a/quatroestacoes/templates/quatroestacoes/reservas/adicionar.html
+++ b/quatroestacoes/templates/quatroestacoes/reservas/adicionar.html
@@ -3,8 +3,15 @@
 
 {% block conteudo %}
 
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Reservar salão">
-</form>
+<div class="container-div-form-morador">
+    <div class="container-form-morador">   
+        <form method="post">{% csrf_token %}
+            <h3>RESERVAR SALÃO DE FESTAS</h3>
+            <span>{{ form.as_p }}</span>
+            <div class="container-cadastrar-morador">
+                <input type="submit" value="Reservar salão">
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock conteudo %}
