--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -4,18 +4,26 @@
 {% block titulo %}Avisos{% endblock titulo %}
 
 {% block conteudo %}
-<a href="{% url 'quatroestacoes:avisos_add' %}">Criar aviso</a>
-{% if avisos %}
-    <ul>
-    {% for aviso in avisos %}
-        <li>
-            {{ aviso.data_postagem }} - {{ aviso.assunto }}<br>
-            {{ aviso.corpo }}<br>
-            {{ aviso.data_evento }}
-        </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>nenhum aviso disponível</p>
-{% endif %}
+<div class="container-avisos">
+    <div class="container-adicionar-morador">
+        <a href="{% url 'quatroestacoes:avisos_add' %}">Criar aviso</a>
+    </div>
+    <div class="container-info-usuario">
+        {% if avisos %}
+            <ul style="padding: 0;">
+            {% for aviso in avisos %}
+                <li style="border-bottom: 1px solid #694C00;">
+                    {{ aviso.data_postagem }} - {{ aviso.assunto }}<br>
+                    {{ aviso.corpo }}<br>
+                    {{ aviso.data_evento }}
+                    <br><br>
+                </li>
+                <br>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>nenhum aviso disponível</p>
+        {% endif %}
+    </div>
+</div>
 {% endblock conteudo %}
